# api-server-question-answer-test-task

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 2025_09_01_2024-80758014438f_add_models.py
src/: config.py  database.py  main.py
src/dependencies/: answer_dep.py  question_dep.py
src/models/: __init__.py  answer.py  base.py  question.py  user.py
src/routers/: answer_router.py  question_router.py  user_router.py
src/schemas/: answer_schemas.py  question_schemas.py  user_schemas.py
src/services/: answer_service.py  question_service.py  user_service.py
